    - !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386 -> linux-any
    - kfreebsd-i386 kfreebsd-amd64 -> kfreebsd-any

  [ Modestas Vainius ]
  * Remove README.Debian introduced in 4.4.5-6, no longer applicable.
  * Drop 34_backport_krunner_crash_fix_threading.diff patch, it was stolen from
    upstream.
  * Replace /usr/share/common-licenses/BSD with verbatim license text.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 31 Jul 2010 16:41:50 +0300

kdebase-workspace (4:4.4.5-8) unstable; urgency=high

  * Backport 33_backport_krunner_crash_fix_threading.diff patch from 4.5.0 to
    fix random but common krunner crashes. (Closes: #607974)
  * Urgency=high, might get to squeeze.

 -- Modestas Vainius <modax@debian.org>  Thu, 20 Jan 2011 01:04:32 +0200

kdebase-workspace (4:4.4.5-7+squeeze1) stable-proposed-updates; urgency=low

  * Backport 33_backport_krunner_crash_fix_threading.diff patch from 4.5.0 to
    fix random but common krunner crashes. (Closes: #607974)

 -- Modestas Vainius <modax@debian.org>  Sat, 12 Feb 2011 20:38:18 +0200

kdebase-workspace (4:4.4.5-7) unstable; urgency=high

  * Replace Conflicts against kwin with Breaks in kde-window-manager. Also
    version them at (<< 4:4).
  * Remove Replaces/Conflicts on kwin (>= 4:4.0.1-1) from libkdecorations4 and
    libkwineffects1a packages.
  * Urgency=high, important for squeeze release.

 -- Modestas Vainius <modax@debian.org>  Thu, 13 Jan 2011 21:50:34 +0200

kdebase-workspace (4:4.4.5-6) unstable; urgency=medium

  [ Pino Toscano ]
  * Move the solid servicetypes from kdebase-workspace-bin.install.linux to
    kdebase-workspace-bin.install. (Closes: #608541)

  [ Modestas Vainius ]
  * Document a workaround for the "dark taskbar" bug in README.Debian. The real
    fix is in KDE SC 4.5 or later. However, regardless, I think this change
    closes: #564941.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Jan 2011 01:48:18 +0200
