@@ -6,7 +6,7 @@ Uploaders: Sune Vuorela <sune@debian.org>, Fathi Boudra <fabo@debian.org>, Armin
  Modestas Vainius <modax@debian.org>, George Kiagiadakis <kiagiadakis.george@gmail.com>,
  José Manuel Santamaría Lema <panfaust@gmail.com>
 Build-Depends: kde-sc-dev-latest (>= 4:4.6.1),
- cdbs (>= 0.4.51), cmake, debhelper (>= 7), pkg-kde-tools (>= 0.9), dpkg-dev (>= 1.15.5),
+ cmake, debhelper (>= 7), pkg-kde-tools (>= 0.12), dpkg-dev (>= 1.15.5),
  kdelibs5-dev (>= 4:4.6), kdepimlibs5-dev (>= 4:4.6),
  libstrigiqtdbusclient-dev (>= 0.6.3), libstreamanalyzer-dev (>= 0.6.3),
  libqimageblitz-dev (>= 1:0.0.4-2),
