@@ -1,41 +1,47 @@
 #!/usr/bin/make -f
 
-DEB_ALL_LIBRARIES_SUBST_PACKAGES = kdebase-workspace-dev
-DEB_STRICT_LOCAL_SHLIBS_PACKAGES = $(DEB_LIBRARY_PACKAGES)
+dh = --with=python-support
+
+include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
+libpkgs_addsubst_allLibraries = kdebase-workspace-dev
+libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
+include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
+
 BINARYVERSION := $(shell dpkg-parsechangelog | grep '^Version: ' | sed 's/^Version: //')
+DEB_HOST_ARCH_OS := $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 
-include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
-include /usr/share/pkg-kde-tools/qt-kde-team/1/library-packages.mk
+override_dh_auto_configure:
+	$(overriden_command) -- -DKDE4_KDM_PAM_SERVICE=kdm -DKDE4_COMMON_PAM_SERVICE=kdm
 
-#DEB_CMAKE_EXTRA_FLAGS += \
-#	-DINSTALL_PRINTER_APPLET=TRUE
+override_dh_strip:
+	$(overriden_command) --dbg-package=kdebase-workspace-dbg
 
-DEB_CMAKE_EXTRA_FLAGS += -DKDE4_KDM_PAM_SERVICE=kdm -DKDE4_COMMON_PAM_SERVICE=kdm
-DEB_DH_MAKESHLIBS_ARGS_ALL := -V -u-c0
+override_dh_makeshlibs:
+	# Private shared libraries which do not install headers
+	$(overriden_command) -plibplasmagenericshell4 '-Vlibplasmagenericshell4 (= $(BINARYVERSION))'
+	$(overriden_command) -pplasma-desktop -Xlibkickoff.so
+	$(overriden_command) --remaining-packages -V -- -c0
 
-# Private shared libraries which do not install headers
-DEB_DH_MAKESHLIBS_ARGS_libplasmagenericshell4 := '-Vlibplasmagenericshell4 (= $(BINARYVERSION))'
+override_dh_shlibdeps:
+	$(overriden_command) -pkdebase-workspace-bin -- -xksysguard
+	$(overriden_command) -pkdebase-workspace-dev -- -xkdebase-runtime
+	$(overriden_command) $(foreach p,$(filter lib%,$(shell dh_listpackages -a)),-p$p) -- -xkdebase-runtime
+	$(overriden_command) --remaining-packages
 
-DEB_DH_MAKESHLIBS_ARGS_plasma-desktop := -Xlibkickoff.so
+# Prevent it from stopping kdm in prerm ever (--no-restart-on-upgrade is not
+# enough)
+override_dh_installinit:
+	$(overriden_command) -pkdm --noscripts
+	$(overriden_command) --remaining-packages
 
-DEB_DH_SHLIBDEPS_ARGS_kdebase-workspace-bin := -- -xksysguard
-DEB_DH_SHLIBDEPS_ARGS_kdebase-workspace-dev := -- -xkdebase-runtime
-
-# For kdm: prevent it from stopping kdm in prerm ever (--no-restart-on-upgrade
-# is not enough)
-DEB_DH_INSTALLINIT_ARGS = --noscripts
-
-$(foreach p,$(filter lib%, $(DEB_ARCH_PACKAGES)),$(eval DEB_DH_SHLIBDEPS_ARGS_$(p) := -- -xkdebase-runtime))
-
-binary-install/kdm::
-	install -p -D -m644 debian/kdm-np.pam debian/kdm/etc/pam.d/kdm-np
-	install -p -D -m644 debian/kdm.insserv debian/kdm/etc/insserv.conf.d/kdm
-
-binary-install/plasma-scriptengine-python::
-	dh_pysupport -p$(cdbs_curpkg) /usr/share/kde4/apps/plasma_scriptengine_python
-
+pkgs_with_install_linux = $(patsubst debian/%.install.linux,%,$(wildcard debian/*.install.linux))
+override_dh_install:
+	$(overriden_command)
 ifeq ($(DEB_HOST_ARCH_OS),linux)
-install/kdebase-workspace-bin install/kdebase-workspace-data install/kinfocenter::
-	# Install common files
-	dh_install -p$(cdbs_curpkg) --ignore=debian/$(cdbs_curpkg).install.linux
+	# Also install common files in place of debian/*.install.linux variants
+	dh_install $(foreach p,$(pkgs_with_install_linux),-p$p --ignore=debian/$p.install.linux)
 endif
+	if [ -d debian/kdm ]; then \
+		install -p -D -m644 debian/kdm-np.pam debian/kdm/etc/pam.d/kdm-np && \
+		install -p -D -m644 debian/kdm.insserv debian/kdm/etc/insserv.conf.d/kdm; \
+    fi
