@@ -116,6 +116,7 @@ kdebase-workspace (4:4.6.1-0r2) UNRELEASED; urgency=low
   * Drop 34_backport_krunner_crash_fix_threading.diff patch, it was stolen from
     upstream.
   * Replace /usr/share/common-licenses/BSD with verbatim license text.
+  * Switch debian/rules engine to dhmk based qt-kde-team/2/*.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 31 Jul 2010 16:41:50 +0300
 
